<resources>
    <string name="app_name">JMT</string>
    <string name="native_key">698e7519cb8c33283ceae6eef56f11d5</string>
    <string name="client_secret_key">RowO1RSHdeM9dobv3UcVFHBCycjE6i2b</string>

    <!-- activity_main -->
    <string name="activity_main_button_upload">음식 올리기 ></string>
    <string name="activity_main_button_start">랜덤 음식 고르기 ></string>
    <string name="activity_main_customer">손님</string>
    <string name="activity_main_owner">사장님</string>
    <string name="activity_main_store_number">머먹노에 총 143,233건의 음식이 등록되어 있습니다.</string>

    <!-- activity_owner_login -->
    <string name="activity_owner_login_label">업주 로그인</string>
    <string name="activity_owner_store_label">업주 가게 상세 화면</string>
    <string name="activity_owner_button_kakao_talk_account_login">카카오톡으로 로그인</string>
    <string name="activity_owner_button_kakao_other_account_login">다른 계정으로 로그인</string>
    <string name="activity_owner_image_kakao_talk_login_tts">카카오 로그인 이미지</string>
    <string name="activity_owner_button_kakao_talk_login_tts">카카오 로그인, 버튼</string>
    <string name="activity_owner_textview_login_guide">아직 JMT 업주님이 아니세요?\n최초 로그인 시 인증번호가 필요합니다</string>
    <string name="activity_owner_textview_phonenumber_guide">고객센터\n0000 - 0000</string>
    <string name="activity_owner_toast_server_error">카카오 서버에서 발생된 오류로 인해 인증에 실패했습니다</string>
    <string name="activity_owner_toast_exceed_request_count_error">허용된 인증 횟수가 초과하여 인증에 실패했습니다</string>
    <string name="activity_owner_toast_authorization_fail_error">인증 서버에서 발생된 오류로 인해 인증에 실패했습니다</string>
    <string name="activity_owner_toast_server_check_error">인증 서버가 점검중입니다</string>
    <string name="activity_owner_toast_system_error">시스템에서 발생된 오류로 인해 인증에 실패했습니다\n개발자에게 알려주세요</string>
    <string name="activity_owner_toast_canceled_operation_error">카카오톡 인증을 취소했습니다</string>
    <string name="activity_owner_toast_network_not_connect_error">인터넷 연결을 확인해주세요</string>
    <string name="activity_owner_toast_unknown_error">알 수 없는 에러가 발생되었습니다\n개발자에게 알려주세요</string>
    <string name="activity_owner_toast_no_session_error">로그인 된 정보가 없습니다. 로그인 화면으로 이동합니다</string>

    <!-- activity_owner_sign_up -->
    <string name="activity_owner_sign_up_label">업주 회원가입</string>
    <string name="activity_owner_button_sign_up_request">회원가입 요청</string>
    <string name="activity_owner_access_key_hint">인증번호 6자리</string>
    <string name="activity_owner_access_key_guide">인증번호 6자리를 입력하세요</string>

    <!-- layout_search_box -->
    <string name="layout_search_box_search_hint">장소 검색</string>

    <!-- Kakao REST API Key -->
    <string name="KAKAO_REST_API_KEY">KakaoAK d6960a6792d64d6af209195c8bfa4094</string>

    <!-- activity_owner_detail -->
    <string name="activity_owner_detail_menu_label">등록메뉴</string>
    <string name="activity_owner_detail_location">위치</string>
    <string name="activity_owner_detail_description">소개</string>
    <string name="activity_owner_detail_not_name">등록된 이름 없음</string>
    <string name="activity_owner_store_not_description">등록된 소개 없음</string>
    <string name="layout_menu_detail_not_menu">이름 없음</string>
    <string name="activity_owner_store_tv_time">운영시간 : </string>
    <string name="activity_owner_detail_name_label">가게이름</string>
    <string name="activity_owner_detail_time_label">운영시간</string>
    <string name="activity_owner_detail_logout_label">로그아웃</string>
    <string name="activity_owner_detail_not_menu_page">메뉴가 존재하지 않습니다</string>

    <!-- activity_store_edit-->
    <string name="activity_store_edit_label">가게 편집</string>
    <string name="activity_store_edit_starttime_label">영업 시작시간</string>
    <string name="activity_store_edit_endtime_label">영업 종료시간</string>
    <string name="activity_store_edit_default_starttime">시작시간을 입력하세요</string>
    <string name="activity_store_edit_default_endtime">종료시간을 입력하세요</string>
    <string name="activity_store_edit_store_name_hint">가게 이름을 입력해주세요</string>
    <string name="activity_store_edit_store_info_received_fail">앱에서 에러가 발생했습니다. 개발자에게 알려주세요</string>
    <string name="activity_store_edit_save_success">저장에 성공했습니다</string>
    <string name="activity_store_edit_extra_menu_detail_info">EXTRA_MENU_DETAIL_INFO</string>
    <string name="activity_store_edit_request_location_search">REQUEST_LOCATION_SEARCH</string>
    <string name="activity_store_edit_descriptor">STORE_EDIT</string>
    <string name="activity_store_edit_timepicker">timepicker</string>
    <string name="activity_store_edit_search_guide">등록된 주소가 없습니다</string>
    <string name="activity_store_edit_description_guide">가게에 대한 소개를 입력해주세요</string>

    <!--action bar menu -->
    <string name="item_action_bar_edit">편집</string>
    <string name="item_menu_owner_register_preview">미리보기</string>
    <string name="item_menu_owner_register_ok">완료</string>
    <string name="item_menu_owner_delete">삭제</string>
    <string name="item_menu_store_edit_save">저장</string>

    <!-- item_menu_select_view -->
    <string name="item_menu_select_label">메뉴 선택</string>
    <string name="item_menu_select_price_tv">원</string>
    <string name="item_menu_select_error">앱에서 에러가 했습니다. 개발자에게 알려주세요</string>
    <string name="item_menu_select_system_error">시스템에서 오류가 발생했습니다. 개발자에게 알려주세요</string>

    <!-- activity_menu_register -->
    <string name="activity_menu_register_label">메뉴 등록</string>
    <string name="activity_menu_register_title_hint">메뉴 이름을 입력하세요</string>
    <string name="activity_menu_register_guide_hint">메뉴 설명을 입력하세요</string>
    <string name="activity_menu_register_price_hint">메뉴 가격을 입력하세요</string>
    <string name="activity_menu_register_photo_fail">사진을 불러오는데 실패하였습니다</string>
    <string name="activity_menu_register_menu_passed_fail">등록되어 있던 메뉴 정보를 불러오는데 실패하였습니다</string>
    <string name="activity_menu_register_menu_delete_guide">메뉴를 삭제할까요?</string>
    <string name="activity_menu_register_menu_delete_yes">예</string>
    <string name="activity_menu_register_menu_delete_no">아니오</string>
    <string name="activity_menu_register_menu_delete_success">메뉴를 삭제했습니다</string>

    <!-- category arrays -->
    <string name="arrays_category_all_food">전체</string>
    <string name="arrays_category_korea_food">한식</string>
    <string name="arrays_category_japan_food">일식</string>
    <string name="arrays_category_china_food">중식</string>
    <string name="arrays_category_western_food">양식</string>
    <string name="arrays_category_chicken">치킨</string>
    <string name="arrays_category_snack_bar">분식</string>
    <string name="arrays_category_world_food">세계요리</string>
    <string name="arrays_category_fast_food">패스트 푸드</string>

    <!-- radius arrays -->
    <string name="arrays_radius_closest">50m</string>
    <string name="arrays_radius_closer">100m</string>
    <string name="arrays_radius_middle">200m</string>
    <string name="arrays_radius_farther">400m</string>
    <string name="arrays_radius_farthest">800m</string>

    <string name="tag_radius_closest">50</string>
    <string name="tag_radius_closer">100</string>
    <string name="tag_radius_middle">200</string>
    <string name="tag_radius_farther">400</string>
    <string name="tag_radius_farthest">800</string>

    <!-- customer main -->
    <string name="activity_customer_main_search_glass">search glass</string>
    <string name="activity_customer_main_search_by_location_name">지역명으로 검색</string>
    <string name="activity_customer_main_radius_label">반경</string>
    <string name="activity_customer_main_category_label">카테고리 선택</string>
    <string name="activity_customer_main_swipe_start">메뉴 랜덤 스와이프 시작!</string>
    <string name="activity_customer_main_map_gps">gps</string>
    <string name="activity_customer_main_empty_result">결과값이 없습니다</string>
    <string name="activity_customer_main_response_error">주변에 등록된 메뉴가 없습니다</string>
    <string name="activity_customer_main_request_error">스와이프 가능한 메뉴가 없습니다</string>
    <string name="activity_customer_main_all_category">전체</string>
    <string name="activity_customer_main_xy">posXY</string>
    <string name="activity_customer_main_latitude">latitude</string>
    <string name="activity_customer_main_longitude">longitude</string>
    <string name="activity_customer_main_address">address</string>
    <string name="activity_customer_main_descriptor">CUSTOMER_MAIN</string>
    <string name="activity_customer_main_extra_menu_data">EXTRA_MENU_DATA</string>
    <string name="presenter_customer_main_fail_geo">주소를 찾을 수 없는 지역입니다</string>

    <!-- permission -->
    <string name="permission_request_guide">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="permission_denied_guide">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_GPS_request_guide">위치 정보 접근 권한이 필요합니다.</string>
    <string name="permission_GPS_denied_guide">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>

    <!-- UCop -->
    <string name="uCrop_toolbar_title">사진 편집</string>

    <!-- register state message -->
    <string name="register_success">성공</string>
    <string name="register_no_image">사진이 등록되지 않았습니다</string>
    <string name="register_no_name">메뉴 이름이 등록되지 않았습니다</string>
    <string name="register_no_description">메뉴 설명이 등록되지 않았습니다</string>
    <string name="register_no_price">가격이 등록되지 않았습니다</string>
    <string name="register_no_category">카테고리가 선택되지 않았습니다</string>

    <!-- menu preview activity -->
    <string name="menu_preview_label">등록 메뉴</string>

    <!-- JMT response code -->
    <string name="JMT_response_success">요청에 성공했습니다</string>
    <string name="JMT_response_no_result">요청된 결과가 없습니다</string>
    <string name="JMT_response_no_singed_up_info">존재하는 ID가 없습니다. 회원가입을 진행합니다</string>
    <string name="JMT_response_fail_sign_up">인증키가 유효하지 않습니다</string>
    <string name="JMT_response_wrong_request_error">앱 시스템에서 에러가 발생했습니다. 개발자에게 알려주세요</string>
    <string name="JMT_response_not_found_error">서버 시스템에서 에러가 발생했습니다. 개발자에게 알려주세요</string>
    <string name="JMT_response_server_system_error">서버 시스템에서 에러가 발생했습니다. 개발자에게 알려주세요</string>
    <string name="JMT_response_server_database_error">서버 시스템에서 에러가 발생했습니다. 개발자에게 알려주세요</string>
    <string name="JMT_response_unknown_error">알 수 없는 에러가 발생했습니다. 개발자에게 알려주세요</string>
    <string name="JMT_response_network_not_connect_error">인터넷 연결을 확인해주세요</string>

    <!-- custom dialog progress -->
    <string name="custom_progress_dialog_message">로딩 중</string>

    <!-- store location -->
    <string name="confirm_btn_hint">이 위치로 확정하기</string>
    <string name="activity_logout_guide">정말 로그아웃 하시겠습니까?</string>
    <string name="activity_logout_yes">예</string>
    <string name="activity_logout_no">아니오</string>
    <string name="activity_logout_no_guide">로그아웃을 취소했습니다</string>
    <string name="activity_owner_store_logout">로그아웃 되었습니다.</string>
    <string name="activity_store_edit_location_search">위치검색</string>

    <!-- location search -->
    <string name="activity_location_search_need_input">값을 입력해주세요</string>

</resources>
