<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_store_number"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:text="@string/activity_main_store_number"
                android:textColor="@color/dark"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_store_number"
                android:layout_centerHorizontal="true"
                android:text="@string/activity_main_customer"
                android:textColor="@color/dark"
                android:textSize="80sp" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="56dp"
                android:background="@drawable/activity_main_rounded_button_customer"
                android:text="@string/activity_main_button_start"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/reddish"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="46dp"
                android:text="@string/activity_main_owner"
                android:textColor="@color/white"
                android:textSize="80sp" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="136dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="56dp"
                android:background="@drawable/activity_main_rounded_button_owner"
                android:text="@string/activity_main_button_upload"
                android:textColor="@color/reddish" />

        </RelativeLayout>

    </LinearLayout>

</layout>