<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.aone.menurandomchoice.views.ownerlogin.OwnerLoginContract.Presenter"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!-- FIXME 카카오톡 로그인, 다른계정 로그인 버튼이 완전 똑같은데 databinding을 이용해서 layout을 만들고 <include/>로 재사용하도록 수정해주세요-->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/x_large_margin"
            android:layout_marginEnd="@dimen/x_large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:background="@drawable/kakao_login_button_background"
            android:onClick="@{ () -> presenter.handlingDeviceKaKaoAccountLogin()}"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/middle_margin"
                android:contentDescription="@string/activity_owner_image_kakao_talk_login_tts"
                android:src="@drawable/talk" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/kakao_login_bar" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/activity_owner_button_kakao_talk_login_tts"
                android:gravity="center"
                android:text="@string/activity_owner_button_kakao_talk_account_login"
                android:textColor="@color/brown"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/x_large_margin"
            android:layout_marginEnd="@dimen/x_large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:background="@drawable/kakao_login_button_background"
            app:layout_constraintBottom_toTopOf="@+id/activity_owner_login_divide_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{ () -> presenter.handlingOtherKaKaoAccountLogin()}"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/middle_margin"
                android:contentDescription="@string/activity_owner_image_kakao_talk_login_tts"
                android:src="@drawable/account" />

            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/kakao_login_bar" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/activity_owner_button_kakao_talk_login_tts"
                android:gravity="center"
                android:text="@string/activity_owner_button_kakao_other_account_login"
                android:textColor="@color/brown"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_owner_login_center_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


        <View
            android:id="@+id/activity_owner_login_divide_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/activity_owner_login_center_guide_line"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@id/activity_owner_login_center_guide_line" />

        <TextView
            android:id="@+id/activity_owner_tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/small_line_Spacing_Extra"
            android:text="@string/activity_owner_textview_login_guide"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_owner_login_divide_view" />

        <TextView
            android:id="@+id/activity_owner_tv_phonenumber_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center"
            android:text="@string/activity_owner_textview_phonenumber_guide"
            android:textColor="@color/darkGray"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="@+id/activity_owner_tv_guide"
            app:layout_constraintStart_toStartOf="@+id/activity_owner_tv_guide"
            app:layout_constraintTop_toBottomOf="@+id/activity_owner_tv_guide" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
